fixing the modals on mobile again

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -196,10 +196,6 @@
         background-color: #000;
     }
     
-    /* .modal-background{
-        width: 100%;
-        max-width: 1000px;
-    } */
 
     .skillTitle{
         margin-top: 50px;
@@ -308,11 +304,6 @@
         overflow: hidden;
         background-color: #000;
     }
-
-    /* .modal-background{
-        width: 100%;
-        max-width: 1000px;
-    } */
 
     .skillTitle{
         margin-top: 50px;
