--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,18 +378,9 @@ header {
 /*Modals*/
 
 /*----------------------------------------------*/
-
-.modal {
-    width: 600px;
-    max-width: 100%;
-    height: 400px;
-    max-height: 100%;
-    overflow: auto;
-}
-
 .modal-background{
-    /* width: 100vw;
-    height:100vh; */
+    width: 100vw;
+    height:100vh;
     background-color:rgba(0, 0, 0, 0.466);
     top:0px;
     z-index:1000;
